--- a/styles.css
+++ b/styles.css
@@ -86,19 +86,15 @@ body {
     display: flex; 
     gap: 50px; 
     margin-top: 36px;
+    height: 500px; 
 }
 
 
 .image-block {
     width: 150px;
-    height: 500px;
+    height: 300px;
     display: flex;
     flex-direction: column;
-}
-
-.image-block div {
-    text-align: center;
-    margin-top: 6px;
 }
 
 .image-block img {
@@ -112,47 +108,18 @@ body {
     height: 200px;
 }
 
-.quote-block {
-    background-color: #E5E7EB;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 72px; 
-}
-
-.quote {
-    width: 62%;
-    font-size: 32px;
-    font-weight: 100;
-    font-style: italic;
+.image-block div {
     color: #1F2937; 
-    margin-top: 100px; 
-    margin-bottom: -10px;
+    text-align: center;
+    margin-top: 6px;
+    font-size: 18px; 
+    font-weight: 600;
 }
 
-.quote-author {
-    width: 56%;
-    text-align: right;
-    font-size: 20px;
-    font-weight: 700;
-    margin-bottom: 100px; 
-}
-
-.item {
-    flex: 1; 
-    font-size: 18px;
-    color: #E5E7EB;
-}
-
-
-.footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 80%; 
-    background-color: #3882F6;
-    margin: auto; 
-    margin-top: 50px;
-    margin-bottom: 50px;
+.vs {
+    color: #1F2937; 
+    font-size: 44px;
+    font-weight: 900; 
+    align-self: center; 
+    height: 340px;           
 }
